  * Sped up sync --content by 2x and other commands like fsck --fast and
    whereis by around 50%, by using git cat-file --buffer.
  * importfeed: Made checking known urls step around 15% faster.
  * fsck: Detect if WORM keys contain a carriage return, and recommend
    upgrading the key. (git-annex could have maybe created such keys back
    in 2013).

 -- Joey Hess <id@joeyh.name>  Thu, 18 Jun 2020 12:21:14 -0400

git-annex (8.20200617) upstream; urgency=medium

  * Added annex.skipunknown git config, that can be set to false to change
    the behavior of commands like `git annex get foo*`, to not skip
    over files/dirs that are not checked into git and are explicitly listed in
    the command line.
  * annex.skipunknown is planned to change to default to false in a
    git-annex release in early 2022. If you prefer the current behavior,
    you can explicitly set it to true.
  * Try to enable special remotes configured with autoenable=yes
    when git-annex auto-initialization happens in a new clone of an
    existing repo. Previously, git-annex init had to be explicitly run to
    enable them. Special remotes cannot display anything when autoenabled
    this way, to avoid interfering with the output of git-annex query
    commands.
  * export: Added options for json output.
  * import: Added --json-progress.
  * addurl: Make --preserve-filename also apply when eg a torrent contains
    multiple files.
  * Fix a crash or potentially not all files being exported when 
    sync -J --content is used with an export remote.
  * export: Let concurrent transfers be done with -J or annex.jobs.
  * move --to, copy --to, mirror --to: When concurrency is enabled, run
    cleanup actions in separate job pool from uploads. 
  * init: If lock probing stalls for a long time (eg a broken NFS server),
    display a message to let the user know what's taking so long.
  * init: When annex.pidlock is set, skip lock probing.