@@ -36,6 +36,8 @@ git-annex (8.20200618) UNRELEASED; urgency=medium
   * fsck: Detect if WORM keys contain a carriage return, and recommend
     upgrading the key. (git-annex could have maybe created such keys back
     in 2013).
+  * When on an adjust --hide-missing branch, fix handling of files that
+    have been deleted but the deletion is not yet staged.
 
  -- Joey Hess <id@joeyh.name>  Thu, 18 Jun 2020 12:21:14 -0400
 
